--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,5 @@
+/*@import '../css/responsive.css';*/
+
 body {
 	padding: 0;
 	margin: 0;
@@ -16,10 +18,27 @@ header {
 	
 }
 
-.logo {
+a {
+	color: #428bca;
+	text-decoration: none;
+}
+
+a:hover {
+	color: #428bca;
+	text-decoration: underline;
+}
+
+
+a.logo {
 	font-weight: bold;
 	font-size: 1.1em;
 	float: left;
+	color: #666
+}
+
+a.logo:hover {
+	cursor: pointer;
+	text-decoration: none;
 }
 
 .nav-menu {
@@ -45,6 +64,7 @@ header {
 .nav-menu a:hover {
 	color: #333;
 }
+
 
 img.main-home-img {
 	background-image: url(../img/Optimized-London_from_a_hot_air_balloon3816_2324_v3.png) ;
@@ -76,11 +96,11 @@ img.main-home-img {
     height: 50px;
     background-color: #000;
     color: #fff;
-    width: 93%;
+	width: 60%;
     font-size: 1.4em;
     font-size: 1.5em;
-
 }
+
 .blk-band {
 	top:0;
 	padding: 20px 1px 0 100px;
@@ -103,7 +123,7 @@ img.main-home-img {
 	margin-left: 100px;
     height: 30px;
     color: #fff;
-    width: 70px;
+    width: 130px;
     font-size: 1.5em;
 	padding: 5px 20px;
 	border: 1px solid #fff;
@@ -116,7 +136,6 @@ img.main-home-img {
 	   background-color: #000;
 }
 .whoami {
-	/*font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;*/
     font-weight: 500;
     line-height: 1.1;
     color: #666;
@@ -124,3 +143,231 @@ img.main-home-img {
 	text-align: center;
 	margin-top: 60px;
 }
+.intro-wrap {
+	width: 60%;
+	margin: 10px auto;
+}
+.my-image {
+	background-color:#fff;
+	border: 1px solid #999;
+	padding: 3px;
+	width: 200px;
+	height: 200px;
+	border-radius: 100px;
+
+}
+
+.intro {
+	padding: 5px 0;
+	font-size: 1.1em;
+	line-height: 22px;
+	color: #555;
+}
+
+.set-1 {
+	float: left;
+	width: 27%;
+}
+
+.set-2 {
+	float: left;
+	width: 60%;
+}
+.clear {
+	clear: both;
+}
+
+/*///////////////  RESPONSIVE STYLES  //////////////////////////*/
+@media only screen and (min-width : 769px) and (max-width : 1408px){
+	.intro-wrap {
+		width: 60%;
+		margin: 10px auto;
+    }
+
+	 .intro {
+		padding: 5px 20px;
+		font-size: 1.1em;
+		line-height: 22px;
+    }
+}
+
+@media only screen and (min-width : 980px) and (max-width : 1208px){
+	.my-image {
+		background-color:#fff;
+		border: 1px solid #999;
+		padding: 3px;
+		width: 150px;
+		height: 150px;
+		border-radius: 100px;
+		margin-top: 30px
+    }
+
+    .intro {
+		padding: 5px 0;
+		font-size: 1.1em;
+		line-height: 22px;
+    }
+}
+@media only screen and (min-width : 780px) and (max-width : 979px){
+    .my-image {
+		background-color:#fff;
+		border: 1px solid #999;
+		padding: 3px;
+		width: 150px;
+		height: 150px;
+		border-radius: 100px;
+		margin-top: 30px
+    }
+
+    .intro {
+		padding: 5px 30px;
+		font-size: 1.1em;
+		line-height: 22px;
+    }
+   
+}
+@media only screen and (min-width : 520px) and (max-width : 799px){
+  .intro-wrap {
+		width: 80%;
+    }
+
+    .my-image {
+		background-color:#fff;
+		border: 1px solid #999;
+		padding: 3px;
+		width: 150px;
+		height: 150px;
+		border-radius: 100px;
+		margin-top: 30px
+    }
+
+    .intro {
+		padding: 5px 50px;
+		font-size: 1.1em;
+		line-height: 22px;
+		font-size: 0.8em;
+		width: 300px
+    }
+   
+}
+
+
+@media only screen and (max-width : 519px){
+.bars{
+	width: 24px;
+	height: 4px;
+	margin: -10px 80px;
+	background: #777;
+	position: relative;
+}
+.bars::after{
+	content: '';
+	display: block;
+	width: 24px;
+	height: 4px;
+	background: #777;
+	position: absolute;
+	z-index: -1;
+	top:8px;
+}
+.bars::before{
+	content: '';
+	display: block;
+	width: 24px;
+	height: 4px;
+	background: #777;
+	position: absolute;
+	z-index: -1;
+	top:-8px;
+}
+.bar-wrp{
+	padding:1px;
+	padding-top:7px;
+	width:24px;
+	opacity:.8;margin:10px auto;
+}
+.bar-wrp:hover{
+	cursor:pointer;
+	opacity: 1;
+}
+  .nav-menu {
+		display: none;
+	}
+
+  .intro-wrap {
+		width: 90%;
+    }
+
+    .my-image {
+		background-color:#fff;
+		border: 1px solid #999;
+		padding: 3px;
+		width: 100px;
+		height: 100px;
+		border-radius: 100px;
+		margin-top: 50px
+    }
+
+    .intro {
+		padding: 5px 30px;
+		font-size: 1.1em;
+		line-height: 22px;
+		font-size: 0.8em;
+		width: 250px
+    }
+   
+.blk-band, .blk-band2, .blk-band3 {
+	opacity: .7;
+    position: absolute;
+    margin-top: 18%;
+    height: 50px;
+    background-color: #000;
+    color: #fff;
+    font-size: 1.4em;
+    font-size: 1.5em;
+}
+
+.blk-band {
+	display: none;
+}
+.blk-band2 {
+	display: none;
+}
+
+.blk-band3 {
+	display: none;
+}
+
+.blk-band4 {
+	display: none;
+}
+.main-img-wrap {
+	display: none
+}
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2){
+.intro-wrap {
+		width: 90%;
+    }
+
+    .my-image {
+		background-color:#fff;
+		border: 1px solid #999;
+		padding: 3px;
+		width: 100px;
+		height: 100px;
+		border-radius: 100px;
+		margin-top: 50px
+    }
+
+    .intro {
+		padding: 5px 40px;
+		font-size: 1.1em;
+		line-height: 22px;
+		font-size: 0.8em;
+		width: 200px
+    }
+}
+
+
