--- a/public/css/widgit.css
+++ b/public/css/widgit.css
@@ -13,12 +13,16 @@
 .widget-list li:hover { background-color: #eee; cursor: pointer; }
 
 .widget-list li span.language{ float: right; }
+a li.last-item {
+    border-bottom: 1px solid #e5e5e5;
+    border-radius: 0 0 8px 8px;
+}
 .icon { color: #444; padding-right: 10px; }
 
 .language { color: #444; }
-.repo-list-header { position: relative; background-color: #F6F9FD}
-/*.list-title {  font-size: 1.5em; position: absolute; top: 10px;  width: 300px}*/
-.avatar-img { border-radius: 50px; padding: 3px; background-color: #fff;border: 1px solid #a9a9a9}
+.repo-list-header { position: relative; background-color: #FAFAFA; border-radius: 8px 8px 0 0;}
+.list-title {  font-size: 1.5em; position: absolute; top: 20px; right: -30px; width: 300px; color: #777}
+.avatar-img { border-radius: 50px; padding: 3px; background-color: #fff;border: 1px solid #CFCFCF}
 @media only screen and (max-width : 519px){
     .widget-list {
         list-style: none;
