--- a/public/css/main.css
+++ b/public/css/main.css
@@ -179,7 +179,7 @@ img.main-home-img {
 }
 
 .repo-list {
-    width: 35%;
+    width: 28%;
     margin: 0 auto;
     list-style: none;
     padding: 0;
@@ -267,7 +267,8 @@ img.main-home-img {
 
 @media only screen and (max-width : 519px){
     .repo-list {
-        margin:0;
+    	width: 80%;
+        margin:20px auto;
     }
 .bars{
 	width: 24px;
